--- a/notebooks/evaluation.ipynb
+++ b/notebooks/evaluation.ipynb
@@ -4,10 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "kJiW4zB4Ary-",
-    "vscode": {
-     "languageId": "plaintext"
-    }
+    "id": "kJiW4zB4Ary-"
    },
    "outputs": [],
    "source": []
@@ -27,8 +24,14 @@
    "include_colab_link": true,
    "provenance": []
   },
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
